<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="top"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:background="@color/gray"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/tip_username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="text">

    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:background="@color/gray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/tip_password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType="textPassword">

    </EditText>
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/white"
        />

</LinearLayout>
